hide overflow to prevent flicker due to tooltip

--- a/timetagger/common/_style_embed.scss
+++ b/timetagger/common/_style_embed.scss
@@ -99,6 +99,7 @@ main .content {
     position: absolute;
     top: 0px; bottom: 0; left: 0; right: 0;
     padding: 1em; margin: 0;  /* override centering for static position */
+    overflow-x: hidden;
 }
 @media screen and (min-width: 1000px) { main .content {
     left: calc(25% - 250px); right: calc(25% - 250px); width: calc(500px + 50%);
